@@ -1,0 +1,10 @@
+#!/usr/bin/env ruby
+#
+#  Created on 2009-10-2.
+#  Copyright (c) 2009. All rights reserved.
+
+require 'rubygems'
+require File.expand_path(File.dirname(__FILE__) + "/../lib/codefumes")
+require "cf_release_project/cli"
+
+CfReleaseProject::CLI.execute(STDOUT, ARGV)
